Fixed issue with first image not showing up in the slide show on load of the graphics page

--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ section p {
 
 /*------------------------------------Page Conent End------------------------------------*/
 
-#slider {
+.slider {
     width: 90%;
     max-width: 900px;
     height: 50vh;
